...
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/mnc1"

            />
...

            <RadioButton
                android:id="@+id/mnc1a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/mnc2" />

        <RadioGroup
...

            <RadioButton
                android:id="@+id/mnc2a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

        <LinearLayout
            android:id="@+id/fldGrpmnc3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/mnc3" />

            <RadioGroup
...

                <RadioButton
                    android:id="@+id/mnc3a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mnc5bcg" />

            <EditText
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mnc5opv0" />

            <EditText
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mnc5p1" />

            <EditText
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mnc5pcv1" />

            <EditText
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mnc5opv1" />

            <EditText
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mnc5p2" />

            <EditText
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mnc5pcv2" />

            <EditText
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mnc5opv2" />

            <EditText
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mnc5p3" />

            <EditText
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mnc5pcv3" />

            <EditText
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mnc5opv3" />

            <EditText
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mnc5ipv1" />

            <EditText
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mnc5m1" />

            <EditText
...

            <EditText
                android:id="@+id/mnc5ipv2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mnc5m2" />

            <EditText
...

            <EditText
                android:id="@+id/mnc5ipv3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/mnc6"

            />
...

            <RadioButton
                android:id="@+id/mnc6a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

        <LinearLayout
            android:id="@+id/fldGrpmnc8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/mnc8" />

            <EditText
...
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/mnc7" />


...

            <RadioButton
                android:id="@+id/mnc7a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/mnc9"

            />
...

            <RadioButton
                android:id="@+id/mnc9a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

        <LinearLayout
            android:id="@+id/fldGrpmnc10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mnc10yy" />

                <EditText
...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mnc10mm" />

                <EditText
...
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/mnc11" />

            <RadioGroup
...

                <RadioButton
                    android:id="@+id/mnc11a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/mnc12"

                />
...

                <RadioButton
                    android:id="@+id/mnc12a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/mnc13"

            />
...

            <RadioButton
                android:id="@+id/mnc13a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
