<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="72dp"
    tools:context="edu.aku.hassannaqvi.pssp.activities.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="72dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="1dp"
                android:gravity="center_horizontal"

                android:keepScreenOn="true"
                android:text="SEROPREVALENCE SURVEY PAKISTAN 2016 - 2017"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="A Project of"
                android:textColor="@color/black_overlay"
                android:background="#efefef"
                android:textSize="16sp"
                android:layout_marginTop="36dp"
                 />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="0dp"
                android:contentDescription="TVI LOGO"
                android:onClick="gotoMain"
                android:src="@drawable/agakhan" />

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:background="#565656"
                android:hint="Username/Code"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="4px"
                android:singleLine="true"
                android:textAlignment="center"
                android:textColor="#efefef" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textAlignment="center" />

            <Spinner
                android:id="@+id/spUC"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="14dp"
                android:hint="@string/mna3"
                android:popupBackground="#3d3d3d"


                />


            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="110dp"
                android:padding="16dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtinstalldate"
                android:gravity="center"
                android:background="#efefef"
                android:textColor="#565656"
                android:textSize="11sp"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
