...
    <string name="mnAge">عمر</string>
    <string name="mnMonths">ماہ</string>
    <string name="mnDays">دن</string>
    <string name="mnSex">جنس</string>
    <string name="mnMale">مرد</string>
    <string name="mnFemale">عورت</string>
    <string name="mnYES">ہاں</string>
    <string name="mnNO">نہیں</string>
    <string name="mnDNK">معلوم نہیں</string>

    <string name="mnOther">کوئی اور (وضاحت کریں)۔</string>

    <string name="nextSection">اگلا سیکشن</string>
    <string name="endForm">اختتام</string>
    <string name="digits">1234567890.,+=-qwertyuiopasdfghjklzxcvbnm ?%#@!&amp;QWERTYUIOPASDFGHJKLZXCVBNM</string>


    <string name="mnfrmno"> ڈی ایم یو سیریل نمبر </string>
    <string name="mnsid"> تحقیقی شناخت نمبر </string>
...
    <string name="mnResp"> جواب دہندہ </string>
    <string name="title_activity_login">Log in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
...
