...
                android:layout_marginBottom="8dp"
                android:layout_marginTop="16dp"
                android:onClick="openB"
                android:text="Section B" />

            <Button
                android:id="@+id/openC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="16dp"
                android:onClick="openC"
                android:text="Section C" />

            <Button
                android:id="@+id/openD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
...
